# dotfiles

./: .editorconfig  .gitignore  .gitmodules  .travis.yml  AGENTS.md  LICENSE.md  Makefile  README.md  biome.json  install.conf.yaml  pyproject.toml
antibody/: bundles.sh  bundles.txt  configure.sh  install.sh
asdf/: configure.sh  install.sh  path.zsh  tool-versions.symlink
autojump/: config.zsh
autoupdate/: install.sh
aws/: aliases.zsh  completion.zsh
direnv/: configure.sh  hook.zsh  install.sh  path.zsh
dnsmasq/: configure.sh  dnsmasq.conf
docker/: aliases.zsh  completion.zsh  install.sh  path.zsh
docs/: ARCHITECTURE.md  CUSTOMIZATION.md  PERSONALIZATION.md  PHILOSOPHY.md  TOPIC-AUTHORING.md  TROUBLESHOOTING.md
editorconfig/: editorconfig.symlink
editors/: aliases.sh
etc/: .asdfrc  .cspell.config.yaml  .default-gems  .default-npm-package  .default-python-packages  .psqlrc  .tool-versions
git/: .gitconfig.local  .gitignore  _helpers.sh  aliases.sh  aliases.zsh  configure.sh  functions.sh  gitconfig.local.symlink  install.sh
golang/: path.zsh
homebrew/: Brewfile  Brewfile.lock.json  Brewfile.symlink  aliases.zsh  install.sh  path.zsh  update.sh
iterm/: com.googlecode.iterm2.plist.example  configure.sh  update.sh
java/: path.zsh
jenv/: configure.sh  configure.zsh  install.sh  path.zsh
jvm/: install.zsh
kubernetes/: aliases.zsh  completion.zsh  configure.sh  path.zsh
macos/: set-defaults.sh
node/: path.zsh
poetry/: completion.zsh  configure.sh  install.sh  path.zsh
python/: aliases.zsh  default-python-packages.symlink  install.sh  (+3 more)
(+184 files in other folders)
